[gd_scene load_steps=3 format=3 uid="uid://x4g035ttk0s2"]

[ext_resource type="Script" uid="uid://cwyl8qi7uyya1" path="res://src/ui/settings_menu.gd" id="1_c54ve"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_026ea"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0

[node name="SettingsMenu" type="PanelContainer"]
custom_minimum_size = Vector2(150, 150)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c54ve")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Header" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/Header"]
layout_mode = 2
bbcode_enabled = true
text = "Settings"
fit_content = true
autowrap_mode = 1
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonExit" type="Button" parent="VBoxContainer/Header"]
custom_minimum_size = Vector2(22, 22)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_font_sizes/font_size = 10
text = "X"

[node name="Body" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_026ea")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Body"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/Body/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "Overall Volume"
fit_content = true

[node name="HSliderOverall" type="HSlider" parent="VBoxContainer/Body/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.25
tick_count = 5
ticks_on_borders = true

[connection signal="pressed" from="VBoxContainer/Header/ButtonExit" to="." method="_on_button_exit_pressed"]
[connection signal="value_changed" from="VBoxContainer/Body/VBoxContainer/HSliderOverall" to="." method="_on_h_slider_overall_value_changed"]
